# STM32-gauge-display

./: .cproject  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  display.ioc
.github/workflows/: ci.yml
Core/Inc/: AHT20.h  GC9A01.h  ILI9341.h  MAX31856.h  lv_conf.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  vw.h
Core/Src/: AHT20.c  GC9A01.c  ILI9341.c  MAX31856.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  vw.c
USB_DEVICE/App/: usbd_desc.c
